--- a/main.scss
+++ b/main.scss
@@ -1,13 +1,14 @@
-:root {
-    font: 62.5%/18px Arial;
+.container {
+    width: 800px;
+    margin: 50px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 200px);
+    grid-template-rows: repeat(9, 1fr);
+    grid-auto-columns: 1fr;
 }
-$myColor: salmon;
-header {
+.item {
     background-color: lightblue;
-    h1 {
-        font-size: 3rem;
-    }
-    p {
-        color: $myColor;
-    }
+}
+.item:nth-child(even) {
+    background-color: salmon;
 }
