--- a/scss/mixin.scss
+++ b/scss/mixin.scss
@@ -1,51 +1,10 @@
-//  Mixin Simple
-@mixin inline-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    li {
-        display: inline-block;
-    }
-}
-header ul {
-    @include inline-list();
-    li {
-        background-color: black;
-        padding: .8rem;
-        a {
-            color: white;
-        }
-    }
-}
-footer ul {
-    @include inline-list();
-    li {
-        padding: .4rem;
-        background-color: salmon;
-        a {
-            color: white;
-            text-decoration: none;
-        }
-    }
-}
-// Argument / parameter dengan mixin
-@mixin flex-box($direction, $justify, $align) {
-    display: flex;
-    justify-content: $justify;
-    align-items: $align;
-    flex-direction: $direction;
-}
+// @import url('modules/mixin.scss');
+// @import url('modules/header.scss');
+// @import url('modules/main.scss');
+// @import url('modules/footer.scss');
 
-.container { 
-    @include flex-box(column-reverse, end, end);
-    width: 600px;
-    height: 400px;
-    background: #eaeaea;
-    .box {
-        width: 60px;
-        height: 60px;
-        background-color: #bada55;
-        text-align: center;
-        line-height: 60px;
-    }
-}
+// @import 'modules/mixin', 'modules/header', 'modules/main', 'modules/footer';
+
+@use 'modules/header';
+@use 'modules/main';
+@use 'modules/footer';
