"belajar @while, function lighten() dan darken() di SCSS mengelapkan dan menerangkan"

--- a/css/flowControl.css
+++ b/css/flowControl.css
@@ -26,4 +26,71 @@
   border-style: solid;
   border-width: 2em;
   border-right-color: red;
+}
+
+.gradient {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.gradient li:nth-child(1) {
+  padding: 4px;
+  background-color: #0f0fff;
+}
+.gradient li:nth-child(2) {
+  padding: 4px;
+  background-color: #1f1fff;
+}
+.gradient li:nth-child(3) {
+  padding: 4px;
+  background-color: #2e2eff;
+}
+.gradient li:nth-child(4) {
+  padding: 4px;
+  background-color: #3d3dff;
+}
+.gradient li:nth-child(5) {
+  padding: 4px;
+  background-color: #4d4dff;
+}
+.gradient li:nth-child(6) {
+  padding: 4px;
+  background-color: #5c5cff;
+}
+.gradient li:nth-child(7) {
+  padding: 4px;
+  background-color: #6b6bff;
+}
+.gradient li:nth-child(8) {
+  padding: 4px;
+  background-color: #7a7aff;
+}
+.gradient li:nth-child(9) {
+  padding: 4px;
+  background-color: #8a8aff;
+}
+.gradient li:nth-child(10) {
+  padding: 4px;
+  background-color: #9999ff;
+}
+
+.socials {
+  font-size: 2em;
+  font-family: arial;
+  font-weight: bold;
+}
+.socials .youtube {
+  color: red;
+}
+.socials .gemini {
+  color: blue;
+}
+.socials .github {
+  color: #eee;
+}
+.socials .dicoding {
+  color: rgba(238, 170, 238, 0.6666666667);
+}
+.socials .projectIDX {
+  color: yellow;
 }/*# sourceMappingURL=flowControl.css.map */
